5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1670_2968.log
== TEST (2019-04-16 18:44:26) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem = mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade
if(mensagem=="S"):
	salgado= 3,50*quantidade
preco=quantidade+refrigerante
print(round(preco,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = mensagem.upper()
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:53) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem = mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = mensagem.upper()
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:02) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem = mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem = mensagem.upper()
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:24) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:46:27) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- EXECUTION TIME:
0.221935
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
3.0
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
13.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:28) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:51) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:47:05) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- EXECUTION TIME:
0.167176
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
3.0
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
13.0
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:07) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante=4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:20) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante= 4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
preco=quantidade+refrigerante
print(round(preco,2))

-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:54:27) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante= 4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
preco= quantidade+refrigerante
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
	print(round(preco,2)
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
			print(round(preco,2))


-- ERROR:
File "XXXX", line 12
    if(mensagem=="S"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:54:56) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante= 4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
preco= quantidade+refrigerante
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
	print(round(preco,2))
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
			print(round(preco,2))


-- EXECUTION TIME:
0.155876
-- ERROR:
  File "/home/codebench/codes/1670/2968/main.py", line 14
    print(round(preco,2))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:54:56) 
-- CODE:
lanche= 5
salgado= 3,50
refrigerante= 4
mensagem=input("digite L ou S:")
mensagem=mensagem.upper()
quantidade=float(input("digite a quantidade de lanches ou salgados:"))
refrigerante=float(input("digite a quantidade de refrigerantes:"))
preco= quantidade+refrigerante
if(mensagem=="L"):
	lanche= 5*quantidade+refrigerante
	print(round(preco,2))
if(mensagem=="S"):
	salgado= 3,50*quantidade+refrigerante
			print(round(preco,2))


-- ERROR:
File "XXXX", line 14
    print(round(preco,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
